test/lu_test/fxt/old_data/trace.rec
#
# E: Event type
# N: Event name
# C: Event category
# W: Worker ID
# T: Thread ID
# S: Start time
#

